<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8cb1d7"
    android:id="@+id/new_task_screen_layout">


    <EditText
        android:id="@+id/taskname"
        android:layout_width="324dp"
        android:layout_height="57dp"
        android:autofillHints="from"
        android:background="@drawable/myedittext"
        android:hint="@string/name"
        android:padding="12sp"
        android:textSize="24sp"
        android:maxLength="15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229"
        android:inputType="text" />

    <EditText
        android:id="@+id/taskfrom"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:autofillHints="from"
        android:background="@drawable/myedittext"
        android:hint="@string/from"
        android:padding="12sp"
        android:textSize="24sp"
        android:maxLength="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354"
        android:inputType="time"/>

    <EditText
        android:id="@+id/taskto"
        android:layout_width="152dp"
        android:layout_height="57dp"
        android:autofillHints="from"
        android:background="@drawable/myedittext"
        android:hint="@string/to"
        android:padding="12sp"
        android:textSize="24sp"
        android:maxLength="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.814"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354"
        android:inputType="time" />


    <EditText
        android:id="@+id/taskdesc"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:layout_width="324dp"
        android:layout_height="192dp"
        android:autofillHints="from"
        android:background="@drawable/myedittext"
        android:hint="@string/description"
        android:padding="12sp"
        android:textSize="24sp"
        android:maxLength="100"
        android:scrollHorizontally="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.436"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_task"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_button"
        android:layout_width="148dp"
        android:layout_height="94dp"
        android:background="@drawable/mybutton"
        android:backgroundTint="@color/red"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/save_button"
        android:layout_width="157dp"
        android:layout_height="94dp"
        android:background="@drawable/mybutton"
        android:backgroundTint="@color/green"
        android:text="@string/save"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />


</androidx.constraintlayout.widget.ConstraintLayout>