...
        android:paddingLeft="10sp"
        android:paddingTop="5sp"
        android:text="name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editbutton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.729"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deletebutton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/mysecondredbutton"
        android:text="X"
        android:textColor="@color/white"
        android:textSize="20sp"
...
