...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8cb1d7"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ConfirmActivity"
    android:id="@+id/confirm_screen_layout">


    <TextView
        android:layout_width="320dp"
        android:layout_height="173dp"
        android:text="Are you sure you want to delete this task?"
...
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/yes_button"
        android:layout_width="157dp"
        android:layout_height="94dp"
        android:background="@drawable/mybutton"
        android:backgroundTint="@color/green"
        android:text="YES"
        android:textColor="@color/black"
...
